--- a/examples/test-1.html
+++ b/examples/test-1.html
@@ -11,6 +11,7 @@
   <script src="../index.js"></script>
   <script>
     window.onload = function () {
+      //promise resolve reject return
 
       // ES6 Promise
       let wait = function (ms) {
