test promise 加入注释

--- a/examples/test-0.html
+++ b/examples/test-0.html
@@ -11,7 +11,9 @@
   <script src="../index.js"></script>
   <script>
     window.onload = function () {
-      //promise 常用用法
+      /**
+       * promise 常用用法
+       */
 
       // ES6 Promise
       let wait = function (ms) {
