--- a/examples/test-2.html
+++ b/examples/test-2.html
@@ -11,7 +11,10 @@
   <script src="../index.js"></script>
   <script>
     window.onload = function () {
-      // promise 同步异步
+      /**
+       * promise 同步异步
+       * promise 本身是同步的，但 then、catch 方法是异步的
+       */
 
       // ES6 Promise
       // let ap = new Promise(function (resolve) {
